# nba-allstar-prediction

./: .gitignore  AUTOMATION_GUIDE.md  GITHUB_SETUP_GUIDE.md  LICENSE  README.md  UPLOAD_GUIDE.md  auto_github_setup.bat  auto_github_setup.sh  deploy_to_github.bat  deploy_to_github.sh  fixed_github_setup.bat  github_automator.py  index.html  project_file.html  pyproject.toml  pytest.ini  requirements.txt  setup_project.py
.github/workflows/: ci-cd.yml
nba-allstar-prediction/: .gitignore  CLEANUP_VERIFICATION.md  README.md  pytest.ini  requirements.txt
nba-allstar-prediction/.github/workflows/: ci-cd.yml
nba-allstar-prediction/notebooks/: project_file.ipynb
nba-allstar-prediction/src/: __init__.py  feature_engineering.py
src/: data_processing.py  feature_engineering.py
tests/: test_data_processing.py
